[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qt-material-ui"
version = "0.1.0"
description = "Material 3 component library for Qt Widgets"
requires-python = ">=3.10"
dependencies = [
]
readme = "README.md"
authors = [
    { name = "David Kanekanian", email = "dkanekanian1@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: PyQt5",
    "Framework :: PySide2",
    "Framework :: PyQt6",
    "Framework :: PySide6",
]
keywords = ["qt", "material", "ui", "components", "widgets"]


[project.optional-dependencies]
dev = [
]

[project.urls]
Repository = "https://github.com/herobank110/qt-material-ui"
