[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qt-material-ui"
version = "0.1.1"
description = "Material 3 component library for Qt Widgets"
requires-python = ">=3.10"
dependencies = [
    "QtPy==2.4.*",
    "materialyoucolor==2.*",
    "typing-extensions==4.*",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = ["Development Status :: 4 - Beta"]
keywords = ["qt", "material", "ui", "components", "widgets"]


[project.optional-dependencies]
dev = [
    "PySide6",
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-qt",
]

[project.urls]
Repository = "https://github.com/herobank110/qt-material-ui"
Documentation = "https://qt-material-ui.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/material_ui"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "W", "C"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.coverage.run]
# Omit these from coverage since they are just generated files with a
# big list of constants. Some of these modules are used in the
# appropriate unit tests for the core token functionality.
omit = [
    "src/material_ui/tokens/md_comp_*",
    "src/material_ui/tokens/md_sys_*",
    "src/material_ui/tokens/md_ref_*",
]
